# agentic-prod-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  skills.md  start.sh  test_pydantic.py
.github/: copilot-instructions.md
app/: main.py  openrouter_config.py
app/api/v1/: api.py  auth.py  chat.py
app/core/: config.py  langfuse.py  limiter.py  logging.py  metrics.py  middleware.py
app/core/langgraph/: duckduckgosearch.py  graph.py
app/core/langgraph/tools/: __init__.py
app/core/prompts/: __init__.py
app/models/: base.py  database.py  session.py  thread.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  graph.py
app/services/: database.py  llm.py
app/utils/: __init__.py  auth.py  graph.py  sanitization.py
evals/: evaluator.py  helpers.py  main.py  schemas.py
evals/metrics/: __init__.py
evals/metrics/prompts/: __init__.py  hallucination.md  toxicity.md
examples/: logging_demo.py
grafana/dashboards/: fastapi-dashboard.json
graphify-out/: .graphify_incremental.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-13/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: docker-entrypoint.sh  run-eval.sh
security/: jwt_private.pem  jwt_public.pem
