[project]
name = "prod-agentic-practice"
version = "0.1.0"
description = "Project to understand layers of production grade systems"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asgiref>=3.11.1",
    "bcrypt>=5.0.0",
    "colorama>=0.4.6",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mem0ai>=2.0.4",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "starlette-prometheus>=0.10.0",
    "structlog>=26.1.0",
    "supabase>=2.31.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
    "zxcvbn>=4.5.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "djlint>=1.39.0",
    "isort>=8.0.1",
    "pylint>=4.0.5",
    "radon>=6.0.1",
    "ruff>=0.15.16",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
